--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "writelesscode.com",
-  "version": "0.0.0",
+  "name": "tbd",
+  "version": "1.0.0",
   "authors": [
-    "Max Gorin <gorinme@gmail.com>"
+    "Erik Grueter <erikgrueter@gmail.com>"
   ],
   "license": "MIT",
   "private": true,
